--- a/page-components/Index/Hero.module.css
+++ b/page-components/Index/Hero.module.css
@@ -4,19 +4,24 @@
   font-weight: 800;
   line-height: 1.1;
   margin: 24px 0 64px;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 .title > span {
   display: block;
   padding-bottom: 10px;
   margin-bottom: -20px;
+  
 }
 
 .nextjs {
   background: linear-gradient(90deg, #7928ca, #ff0080);
+  float: left;
 }
 
 .mongodb {
+  float: right;
   background: linear-gradient(90deg, rgb(110, 96, 245), rgb(131, 219, 167));
 }
 
